-selecionar da pagina de agendamento ajustado -design do cadastro em andamento

--- a/consulta-medica-js/App/View/agendamento.html
+++ b/consulta-medica-js/App/View/agendamento.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendar Consulta - Consultório Tech</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="View/design/agendamento1.css">
+    <link rel="stylesheet" href="design/agendamento1.css">
 </head>
 
 <body>
@@ -169,7 +169,7 @@
         <p>&copy; 2024 Consultório Tech | <i class="fas fa-phone"></i> (11) 1234-5678 | Todos os direitos reservados</p>
     </footer>
 
-    <script src="scripts/agendamento2.js"></script>
+    <script src="../js/agendamento2.js"></script>
 </body>
 
 </html>
